# internal/server/server.gen.go
@@ -1,6 +1,6 @@
 // Package server provides primitives to interact with the openapi HTTP API.
 //
-// Code generated by github.com/deepmap/oapi-codegen version v1.15.0 DO NOT EDIT.
+// Code generated by github.com/deepmap/oapi-codegen version v1.16.2 DO NOT EDIT.
 package server
 
 import (
@@ -16,6 +16,9 @@ type ServerInterface interface {
 	// Creates a new account
 	// (POST /account)
 	PostAccount(ctx echo.Context) error
+	// Delete account by id
+	// (DELETE /account/{id})
+	DeleteAccount(ctx echo.Context, id int64) error
 	// Returns account by id
 	// (GET /account/{id})
 	GetAccount(ctx echo.Context, id int64) error
@@ -35,6 +38,22 @@ func (w *ServerInterfaceWrapper) PostAccount(ctx echo.Context) error {
 
 	// Invoke the callback with all the unmarshaled arguments
 	err = w.Handler.PostAccount(ctx)
+	return err
+}
+
+// DeleteAccount converts echo context to params.
+func (w *ServerInterfaceWrapper) DeleteAccount(ctx echo.Context) error {
+	var err error
+	// ------------- Path parameter "id" -------------
+	var id int64
+
+	err = runtime.BindStyledParameterWithLocation("simple", false, "id", runtime.ParamLocationPath, ctx.Param("id"), &id)
+	if err != nil {
+		return echo.NewHTTPError(http.StatusBadRequest, fmt.Sprintf("Invalid format for parameter id: %s", err))
+	}
+
+	// Invoke the callback with all the unmarshaled arguments
+	err = w.Handler.DeleteAccount(ctx, id)
 	return err
 }
 
@@ -99,6 +118,7 @@ func RegisterHandlersWithBaseURL(router EchoRouter, si ServerInterface, baseURL 
 	}
 
 	router.POST(baseURL+"/account", wrapper.PostAccount)
+	router.DELETE(baseURL+"/account/:id", wrapper.DeleteAccount)
 	router.GET(baseURL+"/account/:id", wrapper.GetAccount)
 	router.PUT(baseURL+"/account/:id", wrapper.PutAccount)
 
