# openapi.yaml
@@ -63,6 +63,26 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Error"
+    delete:
+      summary: Delete account by id
+      operationId: deleteAccount
+      parameters:
+        - name: id
+          in: path
+          description: ID of account to fetch
+          required: true
+          schema:
+            type: integer
+            format: int64
+      responses:
+        "200":
+          description: no content
+        default:
+          description: unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
   /account:
     post:
       summary: Creates a new account
